# code

./: .gitignore  ACE_BOTH_FIXES_APPLIED.md  ACE_FINAL_FIX_SUMMARY.md  ACE_FIX_APPLIED.md  ACE_PREFETCH_IMPLEMENTATION.md  AGENT-NAME-MISMATCH-FIX.md  AGENTS.md  ARB_HANDOFF.md  ARCHITECT_QUESTIONS.md  ARCHITECT_REVIEW_BOARD_OUTPUT.md  ARCHITECT_REVIEW_RESEARCH.md  AUTOMATIC-EVIDENCE-EXPORT.md  CHANGELOG.md  CLAUDE-WEB-PROMPT.txt  CLAUDE.md  CONTRIBUTING.md  DEBUG-REPORT-SPEC-KIT-900.md  DEV_BRIEF.md  EVIDENCE-FIXES-COMPLETE.md  GEMINI.md  HANDOFF.md  IMPLEMENTATION_SUMMARY.md  MAIEUTIC_HANDOFF.md  MODEL_ASSESSMENT_SPEC_PROMPT.md  MODEL_COMMAND_EXPANSION_SPEC_PROMPT.md  Model Upgrade.md  NEXT-SESSION-CONTEXT.md  NEXT-SESSION-PROMPT-SPEC-933.md  NEXT-SESSION-PROMPT.md  NEXT-SESSION-PROMPT.txt  NEXT-STEPS-QUALITY-GATES.md  NEXT_STEPS.md  PIPELINE-FAILURE-ANALYSIS.md  PIPELINE-HANG-ROOT-CAUSE.md  PLANNING.md  PROJECT_STATUS_ULTRATHINK.md  PROMPT-FOR-CLAUDE-CODE-WEB.md  QUICK_TEST_COMMANDS.sh  README-SESSION-3.md  README.md  (+49 more)
.gemini/: settings.json
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.jules/: bolt.md  sentinel.md
.notebooklm/: README.md
analysis/: notebooklm-usecases.md  notebooklm.md  requirements.md
archive/: ARCHIVE_FORMAT.md  docs-pack-20260122-manifest.json  docs-pack-20260122.tar.zst
codex-rs/: .gitignore  ACE_ACTIVATION_GUIDE.md  ACE_COMMIT_PLAN.md  ACE_FULL_FRAMEWORK.md  ACE_INJECTION_ARCHITECTURE_RETHINK.md  ACE_INJECTION_FIX_REPORT.md  ACE_QUICKSTART.md  ACE_SPEC_INTEGRATION_ANALYSIS.md  ACE_TROUBLESHOOTING.md  ACE_ULTRATHINK_ANALYSIS.md  Cargo.toml  DEV_BRIEF.md  HANDOFF.md  HONEST_ASSESSMENT.md  MEMORY-POLICY.md  README.md  REVIEW.md  SPEC-920-VALIDATION-COMPLETE.md  SPEC-923-FIX-SUMMARY.md  SPEC-923-IMPLEMENTATION-SUMMARY.md  SPEC-923-TESTING-CHECKLIST.md  SPEC-923-TMUX-FIX.md  SPEC.md  TESTING-CRITIQUE.md  TESTING-FINAL-SUMMARY.md  TESTING-IMPLEMENTATION-REPORT.md  TESTING-QUICK-START.md  TESTING.md  TMUX-AUTOMATION-SUMMARY.md  UPSTREAM_SYNC.md  config.md  config.toml.example  deny.toml  model_policy.toml
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: architect_cmd.rs  lib.rs  llm.rs  local_memory_cmd.rs  login.rs  main.rs  mcp_cmd.rs  pm_cmd.rs  reflex_cmd.rs  speckit_cmd.rs  stage0_cmd.rs
codex-rs/cli/src/local_memory_cmd/: import.rs  mod.rs
codex-rs/cli/tests/: speckit.rs  speckit_helpers.rs
codex-rs/cli/tests/fixtures/: sample.docx
codex-rs/core/tests/common/: Cargo.toml
codex-rs/feedback/: Cargo.toml
codex-rs/feedback/src/: lib.rs
codex-rs/keyring-store/: Cargo.toml
codex-rs/keyring-store/src/: lib.rs
codex-rs/login/: Cargo.toml
codex-rs/login/src/: device_code.rs  device_code_anthropic.rs  device_code_google.rs  device_code_openai.rs  device_code_storage.rs  lib.rs  server.rs
codex-rs/mcp-client/: Cargo.toml
codex-rs/mcp-types/: Cargo.toml  generate_mcp_types.py
codex-rs/mcp-types/src/: lib.rs
codex-rs/pm-service/: Cargo.toml
codex-rs/pm-service/src/: engine.rs  ipc.rs  lib.rs  main.rs  manager.rs  persistence.rs  protocol.rs
codex-rs/pm-service/tests/: walking_skeleton.rs
codex-rs/spec-kit/: Cargo.toml
codex-rs/spec-kit/src/: error.rs  faults.rs  gate_policy.rs  lib.rs  router.rs  timing.rs  types.rs
codex-rs/spec-kit/src/config/: error.rs  hot_reload.rs  loader.rs  mod.rs  policy_toggles.rs  registry.rs  validator.rs
codex-rs/spec-kit/src/config/schemas/: ace_frame.schema.v1.json  ace_intake_frame.schema.v1.json  app_config.schema.json  consensus_config.schema.json  cost_config.schema.json  evidence_config.schema.json  model_config.schema.json  quality_gates.schema.json  retry_config.schema.json
codex-rs/spec-kit/src/executor/: command.rs  mod.rs  review.rs  status.rs
codex-rs/spec-kit/src/gatekeeper/: classifier.rs  mod.rs
codex-rs/spec-kit/src/packet/: anchor_guard.rs  io.rs  mod.rs  schema.rs
codex-rs/spec-kit/src/retry/: circuit_breaker.rs  classifier.rs  mod.rs  strategy.rs
codex-rs/spec-kit/tests/: gatekeeper_tests.rs  packet_tests.rs
codex-rs/spec-kit/tests/fixtures/SPEC-CI-001/: README.md
codex-rs/spec-kit/tests/fixtures/SPEC-CI-001/docs/SPEC-CI-001-clean/: PRD.md  implement.md  plan.md  tasks.md  validate.md
codex-rs/spec-kit/tests/fixtures/SPEC-CI-001/docs/SPEC-CI-001-conflict/: plan.md
codex-rs/spec-kit/tests/fixtures/SPEC-CI-001/docs/SPEC-CI-001-malformed/: plan.md
codex-rs/spec-kit/tests/fixtures/SPEC-CI-001/docs/SPEC-OPS-004-integrated-coder-hooks/evidence/consensus/SPEC-CI-001-clean/: spec-plan_claude_20251220T000000.json
codex-rs/spec-kit/tests/fixtures/SPEC-CI-001/docs/SPEC-OPS-004-integrated-coder-hooks/evidence/consensus/SPEC-CI-001-conflict/: spec-plan_architect_20251220T000000.json
codex-rs/spec-kit/tests/fixtures/SPEC-CI-001/docs/SPEC-OPS-004-integrated-coder-hooks/evidence/consensus/SPEC-CI-001-malformed/: spec-plan_broken_20251220T000000.json
codex-rs/spec-kit/tests/retry/: mod.rs
codex-rs/stage0/: Cargo.toml  STAGE0_SCHEMA.sql
codex-rs/stage0/src/: config.rs  dcc.rs  errors.rs  eval.rs  guardians.rs  hybrid.rs  lib.rs  overlay_db.rs  policy.rs  reflex_config.rs  scoring.rs  system_memory.rs  tfidf.rs  tier2.rs  vector.rs
codex-rs/stage0/src/librarian/: audit.rs  causal.rs  classifier.rs  client.rs  mod.rs  templater.rs
codex-rs/stage0/src/project_intel/: mod.rs  snapshot.rs  types.rs
codex-rs/stage0/tests/: convergence_acceptance.rs
config/: project_profile.toml
docs/: ANALYSIS-GUIDE.md  ARCHITECT-FEATURE-PARITY.md  ARCHITECT-SIDECAR.md  ARCHITECTURE.md  AUTH-MODULE-DIFF-REPORT.md  AUTO-DRIVE-SPECKIT-ANALYSIS.md  CLA.md  CLI-ROUTING-ARCHITECTURE.md  CONFIG.md  CONTINUE-TUI-TESTING.md  CONTRIBUTING.md  DECISIONS.md  DECISION_REGISTER.md  DEPRECATIONS.md  DOCUMENTATION_CLEANUP_PLAN.md  DOCUMENTATION_CONSOLIDATION_COMPLETE.md  DOGFOODING-BACKLOG.md  DOGFOODING-CHECKLIST.md  ENHANCEMENTS.md  EXTRACTION-GUIDE.md  FORK-DIVERGENCES.md  GETTING_STARTED.md  GOLDEN_PATH.md  HANDOFF-P51.md  HANDOFF-P52.md  HANDOFF-P53.md  HANDOFF-P55.md  HANDOFF-P56.md  HANDOFF-P57.md  HANDOFF-P59.md  HANDOFF-P63.md  (+149 more)
(+2543 files in other folders)
