[package]
edition = "2024"
name = "codex-cli"
version = { workspace = true }
license = "Apache-2.0"

[[bin]]
name = "code"
path = "src/main.rs"

[lib]
name = "codex_cli"
path = "src/lib.rs"

[lints]
workspace = true

[features]
# SPEC-KIT-980: Forward feature gates to codex-tui
memvid-pdf = ["codex-tui/memvid-pdf"]
memvid-docx = ["codex-tui/memvid-docx"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true }
codex-arg0 = { workspace = true }
codex-chatgpt = { workspace = true }
codex-common = { workspace = true, features = ["cli"] }
codex-core = { workspace = true }
codex-pm-service = { workspace = true }
codex-exec = { workspace = true }
codex-login = { workspace = true }
codex-spec-kit = { workspace = true }
codex-stage0 = { workspace = true }
codex-mcp-server = { workspace = true }
codex-protocol = { workspace = true }
codex-protocol-ts = { workspace = true }
codex-tui = { workspace = true }
codex-version = { path = "../codex-version" }
futures = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "json"] }
regex = "1"
tar = "0.4"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tempfile = { workspace = true }
uuid = { version = "1", features = ["v4"] }
which = { workspace = true }
owo-colors = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
supports-color = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
