[package]
edition = "2024"
name = "mcp-types"
version = { workspace = true }
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ts-rs = { workspace = true, features = ["serde-json-impl", "no-serde-warnings"] }
