[package]
name = "codex-pm-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "codex-pm-service"
path = "src/main.rs"

[lib]
name = "codex_pm_service"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
codex-core = { workspace = true }
codex-tui = { workspace = true }
codex-app-server-protocol = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dirs = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
