[package]
edition = "2024"
name = "codex-spec-kit"
version = { workspace = true }
license = "Apache-2.0"

[lib]
name = "codex_spec_kit"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
# Core dependencies
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
dirs = "5.0"
fs2 = "0.4"
jsonschema = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
tracing = "0.1"

# SPEC-945D: Filesystem watching for config hot-reload
notify = "6.1"
notify-debouncer-full = "0.3"

# MCP integration
mcp-types = { path = "../mcp-types" }

# Internal deps (will need codex-core for McpConnectionManager)
codex-core = { path = "../core" }

# SPEC-945C: Retry logic with exponential backoff
backon = { workspace = true }
rand = { workspace = true }
rusqlite = { workspace = true }

# P5-SYNC: Auto Drive retry patterns (cancellation support)
tokio-util = { workspace = true }

# P53-SYNC: Unified cancellation via OrCancelExt trait
codex-async-utils = { workspace = true }

[features]
default = []
# P6-SYNC Phase 3: Development-only fault injection for testing error handling
dev-faults = []

[dev-dependencies]
serial_test = "3"
tempfile = "3"
tokio-test = "0.4"
