[package]
edition = "2024"
name = "core_test_support"
version = { workspace = true }
license = "Apache-2.0"

[lib]
path = "lib.rs"

[dependencies]
anyhow = { workspace = true }
codex-core = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["time"] }
wiremock = { workspace = true }
